--- a/src/app/pages/operator.component.html
+++ b/src/app/pages/operator.component.html
@@ -19,5 +19,7 @@
             </div>
         </div>
     </ng-container>
+    <button type="submit" class="btn btn-primary btn-block" (click)="chooseQuestion({index: 0})">Akhiri Vote</button>
+
     <!-- <h1 *ngIf="chosenCounter == 5" style="color: #fff;text-align: center;margin-top: 30%;">Semua pertanyaan telah terpilih</h1> -->
 </div>
