--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -15,11 +15,11 @@
         
         <div class="col-md-6 no-padding">
           <div class="col-md-12 no-padding">
-            <div class="card card-poll card-success" style="margin-bottom: 0; height: 50vh">
+            <div class="card card-poll card-primary" style="margin-bottom: 0; height: 50vh">
               <div class="card-body">
               <div class="alert alert-info" role="alert" style="    margin: 10px 20px 0px 20px;">Event hari ini: <strong>Kick Off</strong></div>
                 <div class="animated fadeIn" *ngIf="current_poll == 1">
-                  <div class="card card-inverse card-success" style="width: 100%;">
+                  <div class="card card-inverse card-primary" style="width: 100%;">
                     <div class="card-body text-center">
                       <h5 class="card-title pt-2">Apa yang muncul di benak anda ketika mendengar kata “Digital”?</h5>
                       <angular-tag-cloud
@@ -32,7 +32,7 @@
                   </div>
                 </div>
                 <div class="animated fadeIn" *ngIf="current_poll == 2">
-                  <div class="card card-inverse card-success" style="width: 100%;">
+                  <div class="card card-inverse card-primary" style="width: 100%;">
                     <div class="card-body text-center">
                       <h5 class="card-title pt-2">Bisakah anda sukses tanpa menjadi Digital?</h5>
                       <div class="question2chart">
@@ -77,7 +77,7 @@
                 </div>
               </div>
                 <div class="animated fadeIn" *ngIf="current_poll == 5">
-                  <div class="card card-inverse card-success" style="width: 100%;">
+                  <div class="card card-inverse card-primary" style="width: 100%;">
                     <div class="card-body text-center">
                       <p class="card-title pt-1">Bisakah kita hari ini berpegang teguh untuk melakukan “THINKING” digital dalam cara kita bekerja?</p>
                       <div class="question2chart">
@@ -114,7 +114,7 @@
                 <div class="progress-bar bg-success progressbar-ut" role="progressbar" [ngStyle]="{'width': persenKomentar + '%'}" attr.aria-valuenow="{{persenKomentar}}" aria-valuemin="0" aria-valuemax="100"></div>
                 <label><h4>{{persenKomentar}}%</h4></label>
               </div>
-              <div><strong>{{participants}}</strong> partisipan polling</div>
+              <div><strong>{{komentars.length}}</strong> komentar & <strong>{{participants}}</strong> partisipan polling</div>
               <small class="text-muted" (click)="clickSetTarget()">Atur target</small>
               
             </ng-container>
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="col-md-6 no-padding">
-          <div class="card card-primary comment-section" style="height: 90vh">
+          <div class="card card-info comment-section" style="height: 90vh">
               <div class="card-header">
                 <h5>Komentar</h5>
               </div>
